--- a/ghAlembicTest/ghAlembicTest.vcxproj
+++ b/ghAlembicTest/ghAlembicTest.vcxproj
@@ -91,13 +91,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ghAlembic.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;$(SolutionDir)x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d ".\..\$(IntDir)ghAlembic.dll" "$(OutDir)"
@@ -116,13 +116,13 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ghAlembic.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;$(SolutionDir)x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d ".\..\$(IntDir)ghAlembic.dll" "$(OutDir)"
@@ -143,7 +143,7 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,7 +151,7 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ghAlembic.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;$(SolutionDir)x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d ".\..\$(IntDir)ghAlembic.dll" "$(OutDir)"
@@ -172,7 +172,7 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Libraries\OpenEXR\include\OpenEXR;C:\Program Files\Libraries\Alembic\include;C:\Program Files\Libraries\glm\include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -180,7 +180,7 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ghAlembic.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;C:\Users\Hiroaki Yamane\Development\RhinoPlugins\libghAlembic\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files\Libraries\OpenEXR\lib;$(SolutionDir)x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d ".\..\$(IntDir)ghAlembic.dll" "$(OutDir)"
@@ -192,6 +192,12 @@ xcopy /y /d "C:\Program Files\Libraries\OpenEXR\bin\Imath-2_3_d.dll" "$(OutDir)"
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\src\ofxAlembic.h" />
+    <ClInclude Include="..\src\ofxAlembicType.h" />
+    <ClInclude Include="..\src\ofxAlembicUtil.h" />
+    <ClInclude Include="..\src\ofxAlembicWriter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
